--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "micromodal": "^0.4.10"
   }
 }
